experiment/simulation/styles.css
/* ... */
.wrapper .tooltip:after {
border-left: solid transparent 10px;
border-right: solid transparent 10px;
border-top: solid #566573 10px;
bottom: -10px;
z-index: 10;
content: " ";
height: 0;
left: 10%;
margin-left: -13px;
position: absolute;
width: 0;
}

.wrapper:hover .tooltip {
opacity: 1;
z-index: 10;
pointer-events: auto;
-webkit-transform: translateY(0px);
  -moz-transform: translateY(0px);
  -ms-transform: translateY(0px);
   -o-transform: translateY(0px);
    transform: translateY(0px);
}

.tickTable{
  font-size: 30px;
  font-weight: bold;
}

/* Style the button that is used to open and close the collapsible content */
.collapsible {
  background-color: #eee;
  color: #444;
  cursor: pointer;
  padding: 18px;
  width: 100%;
  border: none;
  text-align: left;
  outline: none;
  font-size: 15px;
}

/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
.active, .collapsible:hover {
  background-color: #ccc;
}

/* Style the collapsible content. Note: hidden by default */
.content {
  padding: 0 18px;
  display: none;
  overflow: hidden;
  background-color: #f1f1f1;
}

.arrow {
  color: dodgerblue;
  position: absolute;
  /* top: 50%;
  left: 50%; */
  transform: translate(-50%, -50%);
  transform: rotate(90deg);
  cursor: pointer;
}

.arrow span {
  color: dodgerblue;
  display: block;
  width: 1.5vw;
  height: 1.5vw;
  border-bottom: 5px solid white;
  border-right: 5px solid white;
  transform: rotate(45deg);
  margin: -10px;
  animation: animate 2s infinite;
}

.arrow span:nth-child(2) {
  animation-delay: -0.2s;
}

.arrow span:nth-child(3) {
  animation-delay: -0.4s;
}

@keyframes animate {
  0% {
      opacity: 0;
      transform: rotate(45deg) translate(-20px, -20px);
  }
  50% {
      opacity: 1;
  }
  100% {
      opacity: 0;
      transform: rotate(45deg) translate(20px, 20px);
  }
}

.feedback {
  color: #119DA4;
  font-weight:bold;
}

.prompt {
  color: #12355B;
  font-weight:bold;
}

#feedback_div{
  padding: 8px;
  font-weight: bold;
  background-color: #119DA4;
  color: white;
  width: fit-content;
  border-radius: 5px;
}

#prompt_div{
  padding: 8px;
  font-weight: bold;
  background-color: #12355B;
  color: white;
  width: fit-content;
  border-radius: 5px;
}

.processes{
  display: flex;
}


/* Button Styles */
#tick-button, #cross-button{
  //background-color: transparent;
  cursor: pointer;
  //font-size: 13px;
  //margin: 0 5px;
  position:absolute;
  color: #333;
}

.tick-button{
  background-color: rgb(0, 180, 0);
  border:none;
}

.cross-button{
  background-color: rgb(260, 0, 0);
  border:none;
}



.closable {
  max-height: 0;
  display: none;
  transition: max-height 0.2s ease-out, opacity 0.5s ease-out;
  opacity: 0;
  background-color:transparent;
}

.closable.active {
  max-height: 650px;
  opacity:1 ;
  display: block;
  transition: max-height 0.5s ease-in, opacity 0.5s ease-in;
}

/* Highlighted state */
.highlight {
  background-color: #16c9d2;
  border-radius: 10px; /* Adjust the value for more or less curve */
  transition: background-color 2s ease-in-out, opacity 2s ease-in-out; /* Slower fade effect */
  opacity: 0.8; /* Initial opacity for visibility */
}


@media (min-width: 768px) { 
  p{
    font-size:13px;
  }
  b{
    font-size:11px;
  }
  th{
    font-size: 11px;
  }
  
  td{
    font-size: 11px;
  }
  .display-block{
    margin: 4px;
  }
 }

@media (min-width: 1024px){
  p{
    font-size:15px;
  }
  b{
    font-size:13px;
  }
  th{
    font-size: 13px;
  }
  
  td{
    font-size: 13px;
  }
  .display-block{
    margin: 6px;
  }
  .ts_states{
    display:block;
  }
  .displays{
    width: 57%;
  }
  .dialog-box{
  width: 21%;
  }
  #start-note{
    display:none;
  }
  .undo-reset-btn{
    display:inline;
    margin-left:100px;
  }
}

@media (min-width: 1440px){
  p{
    font-size:18px;
  }
  b{
    font-size:16px;
  }
  th{
    font-size: 16px;
  }
  
  td{
    font-size: 16px;
  }
  .arrow{
    left: 110%;
  }
  #guide-tip{
    left: 140%;
  } 
  .display-block{
    margin: 10px;
  }
  .tabset > label{
    font-size:15px;
  }
}

